Home page update

--- a/index.html
+++ b/index.html
@@ -776,18 +776,17 @@
         <div class="demos-grid">
           <div class="demo-card featured" data-category="collisions">
             <div class="demo-preview">
-              <span>🎱</span>
+              <img src="./images/ball-pool.png" />
               <div class="demo-badge">Featured</div>
             </div>
             <div class="demo-content">
-              <h3>Circle Vs Circle Collision Detection</h3>
+              <h3>Ball Pool</h3>
               <p>
-                Interactive demo showcasing various collision scenarios with two
-                circles.
+                Classic ball pool example where balls are spawned randomly in confined box.
               </p>
               <div class="demo-actions">
                 <a
-                  href="./test/circle-vs-circle/index.html"
+                  href="./test/stack-balls/index.html"
                   class="btn btn-primary btn-small"
                   >Launch Demo</a
                 >
@@ -797,18 +796,17 @@
           </div>
           <div class="demo-card featured" data-category="fluids">
             <div class="demo-preview">
-              <span>🌊</span>
+              <img src="./images/rotational-resolution.png" />
               <div class="demo-badge">Featured</div>
             </div>
             <div class="demo-content">
-              <h3>Polygon vs Polygon</h3>
+              <h3>Collision Resolution (with Roatations) </h3>
               <p>
-                Interactive demo showcasing various collision scenarios with two
-                polygons.
+                Interactive demo showcasing various objects interacting each other with rotational forces acting.
               </p>
               <div class="demo-actions">
                 <a
-                  href="./test/polygon-vs-polygon/index.html"
+                  href="./test/rotational-resolution/index.html"
                   class="btn btn-primary btn-small"
                   >Launch Demo</a
                 >
@@ -818,7 +816,7 @@
           </div>
           <div class="demo-card featured" data-category="constraints">
             <div class="demo-preview">
-              <span>🏗️</span>
+              <img src="./images/circle-vs-polygon.png" />
               <div class="demo-badge">Featured</div>
             </div>
             <div class="demo-content">
